--- a/meowser.html
+++ b/meowser.html
@@ -6,7 +6,9 @@
     <meta charset="UTF-8"/>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"/>
-    <link href="css/meowser.css" rel="stylesheet"/>
+    <!-- CSS for searchbar: -->
+    <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet"/>
+    <link href="src/css/meowser.css" rel="stylesheet"/>
     <title>Meowser</title>
   </head>
   <body>
@@ -30,15 +32,14 @@
           </div>
         </div>
       </div>
-      <div class="px-3 py-2 border-bottom mb-3">
-        <div class="container d-flex flex-wrap justify-content-center">
-          <form class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto" role="search">
-            <input id="zipcodeSearchField" type="search" class="form-control" placeholder="Search Zipcode..." aria-label="Search">
-          </form>
-          <div class="text-end">
-            <button type="button" class="btn btn-light text-dark me-2">Login</button>
-            <button type="button" class="btn btn-primary">Sign-up</button>
-          </div>
+      <!-- Searchbar taken from bbootstrap.com: -->
+      <!-- https://bbbootstrap.com/snippets/awesome-search-bar-hover-button-using-html-and-css-96470765 -->
+      <div class="d-flex justify-content-center h-100">
+        <div class="search" id="zipcodeSearchField">
+          <input type="text" class="search-input" placeholder="search..." name="">
+            <a href="#" class="search-icon" id="zipcodeSearchButton">
+              <i class="fa fa-search"></i>
+            </a>
         </div>
       </div>
     </header>
@@ -70,6 +71,6 @@
     <!-- Bootstrap JS -->
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="js/meowser.js"></script>
+    <script src="src/js/meowser.js"></script>
   </body>
 </html>
