Adding latest progress to attempt to make POST requests for PetFinder API

--- a/meowser.html
+++ b/meowser.html
@@ -35,8 +35,8 @@
       <!-- Searchbar taken from bbootstrap.com: -->
       <!-- https://bbbootstrap.com/snippets/awesome-search-bar-hover-button-using-html-and-css-96470765 -->
       <div class="d-flex justify-content-center h-100">
-        <div class="search" id="zipcodeSearchField">
-          <input type="text" class="search-input" placeholder="Enter zipcode..." name="">
+        <div class="search">
+          <input type="text" class="search-input" id="zipcodeSearchInput" placeholder="Enter zipcode..." name="">
             <a href="#" class="search-icon" id="zipcodeSearchButton">
               <i class="fa fa-search"></i>
             </a>
@@ -71,7 +71,7 @@
     <!-- Bootstrap JS -->
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="src/js/meowser.js"></script>
+    <!-- <script src="src/js/meowser.js"></script> -->
     <script src="src/js/test.js"></script>
   </body>
 </html>
