--- a/meowser.html
+++ b/meowser.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"/>
     <!-- CSS for searchbar: -->
     <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet"/>
-    <link href="src/css/meowser.css" rel="stylesheet"/>
+    <link href="assets/css/meowser.css" rel="stylesheet" type="text/css"/>
     <title>Meowser</title>
   </head>
   <body>
