--- a/meowser.html
+++ b/meowser.html
@@ -6,8 +6,6 @@
     <meta charset="UTF-8"/>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"/>
-    <!-- CSS for searchbar: -->
-    <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet"/>
     <link href="assets/css/meowser.css" rel="stylesheet" type="text/css"/>
     <title>Meowser</title>
   </head>
@@ -64,7 +62,6 @@
     <!-- Bootstrap JS -->
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <!-- <script src="src/js/meowser.js"></script> -->
-    <script src="src/js/test.js"></script>
+    <script src="src/js/meowser.js"></script>
   </body>
 </html>
