Adding menu revisions, and drilling down into 'name' attribute

--- a/meowser.html
+++ b/meowser.html
@@ -32,9 +32,9 @@
       </div>
     </header>
     <main>
-      <section id="leftOptionsMenu" class="menuSection">
+      <section id="leftBreedsMenu" class="menuSection">
         <h1>Step 1</h1>
-        <h2>Options:</h2>
+        <h2>Breeds:</h2>
         <label for="breed-select">Choose A Breed:</label>
         <select id="breed-select">
           <option value="">Domestic Shorthair</option>
@@ -46,7 +46,7 @@
       </section>
       <section id="middlePhraseMenu" class="menuSection">
         <h1>Step 2:</h1>
-        <h2>Add Phrases / Find Cat:</h2>
+        <h2>Add Phrases / Find Photo:</h2>
         <form>
           <input id="phraseInput" type="text" placeholder="Enter phrase to add" value=""/>
           <input id="phraseFormSubmit" type="submit" name="submit" value="Find Cat Photo">
