Adding additional image and fact buttons

--- a/meowser.html
+++ b/meowser.html
@@ -46,10 +46,11 @@
       </section>
       <section id="middlePhraseMenu" class="menuSection">
         <h1>Step 2:</h1>
-        <h2>Add Phrases / Find Photo:</h2>
+        <h2>Click Buttons</h2>
         <form>
-          <input id="phraseInput" type="text" placeholder="Enter phrase to add" value=""/>
-          <input id="phraseFormSubmit" type="submit" name="submit" value="Find Cat Photo">
+          <input id="catImageButton" type="submit" name="submit" value="View Cat Image">
+          <input id="catWikiButton" type="submit" name="submit" value="View Wikipedia Article">
+          <input id="catFactButton" type="submit" name="submit" value="View Random Cat Fact">
         </form>
       </section>
       <section id="rightResultsMenu" class="menuSection">
