--- a/meowser.html
+++ b/meowser.html
@@ -48,7 +48,7 @@
         <h1>Step 2:</h1>
         <h2>Click Buttons</h2>
         <form>
-          <input id="catImageButton" type="submit" name="submit" value="View Cat Image">
+          <input id="catImagesButton" type="submit" name="submit" value="View Cat Image(s)">
           <input id="catWikiButton" type="submit" name="submit" value="View Wikipedia Article">
           <input id="catFactButton" type="submit" name="submit" value="View Random Cat Fact">
         </form>
@@ -57,6 +57,7 @@
         <h1>Step 3:</h1>
         <h2>Results:</h2>
         <div id="resultsDiv">
+          <img alt="" src="" id="resultImage"/>
         </div>
       </section>
     </main>
