Adding attempts to utilize 'Cat Fact' API for third button choice

--- a/meowser.html
+++ b/meowser.html
@@ -58,6 +58,8 @@
         <h2>Results:</h2>
         <div id="resultsDiv">
           <img alt="" src="" id="resultImage"/>
+          <h2 id="resultsCatFactHeader"></h2>
+          <p id="resultsCatFactParagraph"></p>
         </div>
       </section>
     </main>
