Adjusting color scheme to be pink

--- a/meowser.html
+++ b/meowser.html
@@ -46,8 +46,8 @@
       <section id="middlePhraseMenu" class="menuSection">
         <h1>Buttons:</h1>
         <form>
-          <input id="catImagesButton" class="btn btn-success" type="submit" name="submit" value="View Cat Image(s)">
-          <input id="catWikiButton" class="btn btn-success" type="submit" name="submit" value="View Wikipedia Article">
+          <input id="catImagesButton" class="btn btn-primary" type="submit" name="submit" value="View Cat Image(s)">
+          <input id="catWikiButton" class="btn btn-warning" type="submit" name="submit" value="View Wikipedia Article">
           <input id="catFactButton" class="btn btn-success" type="submit" name="submit" value="View Random Cat Fact">
         </form>
       </section>
