Adding 'Fancybox' components for later use in resulting image gallery

--- a/meowser.html
+++ b/meowser.html
@@ -4,9 +4,13 @@
     <!-- Include Bootstrap CSS here: -->
     <!-- https://getbootstrap.com/docs/5.2/getting-started/download/ -->
     <meta charset="UTF-8"/>
+    <!-- Making website mobile responsive to device width: -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"/>
     <link href="assets/css/meowser.css" rel="stylesheet" type="text/css"/>
+    <!-- Fancybox Related CSS Stylesheets:  -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css" />
     <title>Meowser</title>
   </head>
   <body>
@@ -64,5 +68,7 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="src/js/meowser.js"></script>
+    <!-- Fancybox JS Script via CDN: -->
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
   </body>
 </html>
