Changing variable names to be centered around a single results section

--- a/meowser.html
+++ b/meowser.html
@@ -59,8 +59,8 @@
         <h1>Results:</h1>
         <div id="resultsDiv">
           <img alt="" src="" id="resultImage"/>
-          <h2 id="resultsCatFactHeader"></h2>
-          <p id="resultsCatFactParagraph"></p>
+          <h2 id="resultsHeader"></h2>
+          <p id="resultsParagraph"></p>
         </div>
       </section>
     </main>
