Adding section naming changes

--- a/meowser.html
+++ b/meowser.html
@@ -36,7 +36,7 @@
       </div>
     </header>
     <main>
-      <section id="leftBreedsMenu" class="menuSection">
+      <section id="breedsMenu" class="menuSection">
         <h1>Breeds:</h1>
         <label for="breedSelect">Choose A Breed:</label>
         <select class="form-select" id="breedSelect">
@@ -47,7 +47,7 @@
           <option value="">Siamese</option>
         </select>
       </section>
-      <section id="middlePhraseMenu" class="menuSection">
+      <section id="phraseMenu" class="menuSection">
         <h1>Buttons:</h1>
         <form>
           <input id="catImagesButton" class="btn btn-primary" type="submit" name="submit" value="View Cat Image(s)">
@@ -55,7 +55,7 @@
           <input id="catFactButton" class="btn btn-success" type="submit" name="submit" value="View Random Cat Fact">
         </form>
       </section>
-      <section id="rightResultsMenu" class="menuSection">
+      <section id="resultsMenu" class="menuSection">
         <h1>Results:</h1>
         <div id="resultsDiv">
           <h2 id="resultsHeader"></h2>
