Refactored code to include single 'clearElement' function

--- a/meowser.html
+++ b/meowser.html
@@ -50,7 +50,7 @@
       <section id="phraseMenu" class="menuSection">
         <h1>Buttons:</h1>
         <form>
-          <input id="catImageButton" class="btn btn-primary" type="submit" name="submit" value="View Cat Image(s)">
+          <input id="catImageButton" class="btn btn-primary" type="submit" name="submit" value="View Cat Image">
           <input id="catWikiButton" class="btn btn-warning" type="submit" name="submit" value="View Wikipedia Article">
           <input id="catFactButton" class="btn btn-success" type="submit" name="submit" value="View Random Cat Fact">
         </form>
