--- a/meowser.html
+++ b/meowser.html
@@ -18,7 +18,7 @@
       <div class="px-3 py-2 bg-site-header">
         <div class="container d-flex flex-wrap justify-content-center">
           <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-decoration-none">
+            <a class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-decoration-none">
               <!-- <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg> -->
               <img alt="" src="images/pawprint.png" width="40" height="32"/>
             </a>
